@@ -25,7 +25,7 @@ Header files and libraries for developing applications for libbde.
 Summary: Several tools for accessing BitLocker encrypted volumes
 Group: Applications/System
 Requires: libbde = %{version}-%{release} @ax_libcsystem_spec_requires@ @ax_libfuse_spec_requires@
-@libbde_spec_tools_build_requires@ @ax_libcsystem_spec_build_requires@ @ax_libcsystem_spec_build_requires@ @ax_libfuse_spec_build_requires@
+@libbde_spec_tools_build_requires@ @ax_libcsystem_spec_build_requires@ @ax_libfuse_spec_build_requires@
 
 %description tools
 Several tools for accessing the BitLocker encrypted volumes
